force-app/main/default/objects/redwing__Task_Rating__c/redwing__Task_Rating__c.object-meta.xml
<CustomObject>
    <label>Task Rating</label>
    <nameField>
        <displayFormat>TR-{00000000}</displayFormat>
        <label>Task Rating Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>