force-app/main/default/objects/redwing__Task_Rating__c/fields/redwing__Rating__c.field-meta.xml
<CustomField>
    <fullName>redwing__Rating__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rating</label>
    <referenceTo>redwing__Rating__c</referenceTo>
    <relationshipLabel>Task Ratings</relationshipLabel>
    <relationshipName>Task_Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>