force-app/main/default/objects/redwing__Task_Rating__c/fields/redwing__Weight__c.field-meta.xml
<CustomField>
    <fullName>redwing__Weight__c</fullName>
    <label>Weight</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>